--- a/Coverpage.html
+++ b/Coverpage.html
@@ -8,9 +8,9 @@
 <body>
     <div class="card">
         <h1>Relocatable Dynamic Partitioning Simulation</h1>
-        <p><strong>Group Members:</strong> Jane Doe, John Smith, Alice Lopez</p>
-        <p><strong>Teacher:</strong> Mr. Cruz</p>
-        <p><strong>Course:</strong> Operating Systems</p>
+        <p><strong>Group Members:</strong></p>
+        <p><strong>Teacher:</strong> Mr. ReyCals</p>
+        <p><strong>Course:</strong> BSIT 2A</p>
 
         <a href="index.html" class="start-btn">Start Simulation</a>
     </div>
