--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="config-panel">
             <div class="input-group">
                 <label for="totalMemory">Total Memory Size (KB):</label>
-                <input type="number" id="totalMemory" min="20" value="100">
+                <input type="number" id="totalMemory" min="20" value="">
             </div>
             <div class="input-group">
                 <label for="numJobs">Number of Jobs:</label>
-                <input type="number" id="numJobs" min="1" value="5">
+                <input type="number" id="numJobs" min="1" value="">
             </div>
             <button id="generateTableBtn">Generate Table</button>
         </div>
