--- a/index.html
+++ b/index.html
@@ -72,16 +72,19 @@
                     <p>Free Memory: <span id="memoryFree">0</span> KB</p>
                 </div>
             </div>
-            <div class="memory-container">
-                <div id="memoryLabels"></div>
-                <div id="memoryVisualization"></div>
-            </div>
-            <div class="event-log-container">
-                <h3>Event Log</h3>
-                <div id="eventLog"></div>
+        
+            <!-- NEW WRAPPER ADDED HERE -->
+            <div class="memory-log-wrapper">
+                <div class="memory-container">
+                    <div id="memoryLabels"></div>
+                    <div id="memoryVisualization"></div>
+                </div>
+                <div class="event-log-container">
+                    <h3>Event Log</h3>
+                    <div id="eventLog"></div>
+                </div>
             </div>
         </div>
-    </div>
     
     <script src="script.js"></script>
 </body>
