--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="loadingOverlay">
+        <img src="loading.gif" alt="Loading..." />
+    </div>
     <div class="container">
         <a href="Coverpage.html" class="back-btn" title="Back to Start Page">&#8592; Back</a>
         
