--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                         <th>Job Size (KB)</th>
                         <th>Loading Time (ms)</th>
                         <th>Finish Time (ms)</th>
+                        <th>Status</th>
                     </tr>
                 </thead>
                 <tbody>
