--- a/Coverpage.html
+++ b/Coverpage.html
@@ -29,20 +29,20 @@
                     <h2>Group Members:</h2>
                     <ul class="member-list">
                         <li class="member">
-                            <span class="member-name">Postrero, Johndel</span>
-                            <span class="member-alt">Class #31</span>
-                        </li>
-                        <li class="member">
                             <span class="member-name">Gillera, Russell Ray Y.</span>
                             <span class="member-alt">Class #20</span>
+                        </li>
+                        <li class="member">
+                            <span class="member-name">Postrero, Johndel A.</span>
+                            <span class="member-alt">Class #30</span>
                         </li>
                         <li class="member">
                             <span class="member-name">Service, Jerick</span>
                             <span class="member-alt">Class #??</span>
                         </li>
                         <li class="member">
-                            <span class="member-name">Carpentero, Althea Cathleen</span>
-                            <span class="member-alt">Class #??</span>
+                            <span class="member-name">Carpentero, Althea Kathleen B.</span>
+                            <span class="member-alt">Class #12</span>
                         </li>
                     </ul>
                 </div>
