--- a/Coverpage.html
+++ b/Coverpage.html
@@ -38,7 +38,7 @@
                         </li>
                         <li class="member">
                             <span class="member-name">Service, Jerick</span>
-                            <span class="member-alt">Class #??</span>
+                            <span class="member-alt">Class #35</span>
                         </li>
                         <li class="member">
                             <span class="member-name">Carpentero, Althea Kathleen B.</span>
